--- a/logapp/templates/logapp/login.html
+++ b/logapp/templates/logapp/login.html
@@ -5,12 +5,12 @@
 {% block content %}
 <!--Row 1: Image + login panel -->
 <section class="splitSection" >
-    <div class="col-md-8" id="big-logo-bg">
+    <div class="col-md-8" id="big-logo-bgx">
         <br>
         <img src="{% static 'images/logo.svg' %}" width="40%" class="logo-image">
     </div>
 
-    <div class="container col-md-4" id="we">
+    <div class="container col-md-4">
         <br><br>
         <!-- Login panel -->
         <div class="panel panel-success card">
@@ -45,64 +45,6 @@
     </div>
 </section>
 
-
-<!-- Row for 3 sections -->
-<div class="row" style="background-color: #f7f7f7">
-    <br><br>
-    <div class="container col-md-4 ">
-        <a href="{% url 'practice:index' %}" class="clickableCard">
-            <div class="panel sections card-div card">
-                <img src="{% static 'images/practice_lamp.svg'%}" width="30%">
-                <h3>Practice</h3>
-                <p class="description">Try out exciting problems and make yourself perfect!</p>
-            </div>
-        </a>
-    </div>
-
-    <div class="container col-md-4 ">
-        <a href="{% url 'articles:index' %}" class="clickableCard">
-            <div class="panel sections card-div card">
-                <img src="{% static 'images/learn_bookshelf.svg'%}" width="30%">
-                <h3>Learn</h3>
-                <p class="description">Access articles written by experienced professionals.</p>
-            </div>
-        </a>
-    </div>
-
-    <div class="container col-md-4 ">
-        <a href="{% url 'forum:index' %}" class="clickableCard">
-            <div class="panel sections card-div card">
-                <img src="{% static 'images/ask_chat.svg'%}" width="30%">
-                <h3>Ask &amp; Answer</h3>
-                <p class="description">Visit the community forums and share knowledge.</p>
-            </div>
-        </a>
-    </div>
-</div>
-
-<div class="row">
-    <!-- <div class="panel panel-default" id="footer-div"> -->
-    <div class="container-fluid">
-        <address style="float:left;">
-            <h4><span class="glyphicon glyphicon-leaf" style="color: #14c07b;"></span> Codersite</h4>
-            <small>
-                Web Technologies Project<br>
-                Delhi Technological University<br>
-                Copyright (c) ShivayaDevelopers
-            </small>
-        </address>
-        <!--<div class="container" style="float:right;">
-            <small>Developers:</small><br>
-            Shilpi<br>
-            Vagisha<br>
-            Yash
-        </div>-->
-    </div>
-</div>
-
-<script>
-  $('li.active').removeClass('active');
-  $('#home-tab').addClass('active');
-</script>
+{% include 'logapp/cardAndFooter.html'%}
 
 {% endblock %}
