--- a/logapp/templates/logapp/register.html
+++ b/logapp/templates/logapp/register.html
@@ -1,13 +1,12 @@
 
-{% extends 'base.html' %}
-{% block title%}Register{% endblock %}
+{% extends 'base2.html' %}
+{% block title%} Register {% endblock %}
 {% block head %}
-  {% load static %}
-  <link rel="stylesheet" type="text/css" href="{% static 'logapp/register.css' %}">
+{% load static %}
 {% endblock %}
 
 
-{% block body %}
+{% block content %}
 
 <div class="container" style="margin-top:30px;position:relative">
     <div class="row" >
@@ -19,8 +18,7 @@
                 <div class="panel-body">
                 <form method="post" action="">
                 {{ form }}
-                
-                
+                                
                 {% csrf_token %}
                 
                 <p class="bs-component" style="margin-top:10px;">
@@ -29,7 +27,6 @@
                             </center>
                         </p>
                 </form>
-
                 
                 </div>
             </div>
