--- a/static/css/mine.css
+++ b/static/css/mine.css
@@ -15,6 +15,8 @@ body{
 
 #big-logo-bg,#we{
   /*background-color: #829192;*/
+
+  background-image:url('../images/glass_board.png');
 }
 img{
   display: block;
